# Autonomous-Exploration-ROS

./: README.md
phase_one/: CMakeLists.txt  package.xml
phase_one/launch/: exploration.launch
phase_one/rviz/: turtlebot3_configurations.rviz
phase_one/src/: odomData.cpp
phase_two/: CMakeLists.txt  package.xml
phase_two/launch/: aruco.launch
phase_two/scripts/: Phase_3_test.py  marker_publish.py
